Bug 1788029 - Clamp snap points inside the scroll range. r=emilio

The spec clearly describes this behavior;

https://drafts.csswg.org/css-scroll-snap/#unreachable

Differential Revision: https://phabricator.services.mozilla.com/D156635